--- a/rei-common/pom.xml
+++ b/rei-common/pom.xml
@@ -5,6 +5,13 @@
     <groupId>com.bynow</groupId>
     <artifactId>rei-common</artifactId>
     <version>1.0.0-SNAPSHOT</version>
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>RELEASE</version>
+        </dependency>
+    </dependencies>
 
     <name>rei-common</name>
 
@@ -15,5 +22,4 @@
         <version>1.0.0-SNAPSHOT</version>
         <relativePath>../rei-parent/pom.xml</relativePath>
     </parent>
-
 </project>
