--- a/rei-admin/pom.xml
+++ b/rei-admin/pom.xml
@@ -26,6 +26,11 @@
             <groupId>com.bynow</groupId>
             <artifactId>rei-generator</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.bynow</groupId>
+            <artifactId>rei-third</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
 
         <!--spring boot依赖-->
         <dependency>
