--- a/rei-third/pom.xml
+++ b/rei-third/pom.xml
@@ -24,6 +24,16 @@
             <groupId>com.bynow</groupId>
             <artifactId>rei-core</artifactId>
         </dependency>
-
+        <!--javaMail-->
+        <dependency>
+            <groupId>javax.mail</groupId>
+            <artifactId>javax.mail-api</artifactId>
+            <version>1.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.mail</groupId>
+            <artifactId>javax.mail</artifactId>
+            <version>1.6.1</version>
+        </dependency>
     </dependencies>
 </project>
