--- a/rei-admin/pom.xml
+++ b/rei-admin/pom.xml
@@ -12,7 +12,7 @@
     <artifactId>rei-admin</artifactId>
     <version>1.0.0-SNAPSHOT</version>
 
-    <packaging>war</packaging>
+    <packaging>jar</packaging>
 
     <name>rei-admin</name>
     <description>rei 的spring boot版本</description>
